# Plant-Health-Meter

./: .gitignore  LICENSE  Plant-health-meter.kicad_pcb  Plant-health-meter.kicad_prl  Plant-health-meter.kicad_pro  Plant-health-meter.kicad_sch  README.md  _autosave-Plant-health-meter.kicad_pcb  mcu.kicad_sch  pwr.kicad_sch  sensors.kicad_sch
PCB/: #auto_saved_files#  LEDS.kicad_sch  New_Library.kicad_sym  Plant-health-meter.kicad_pcb  Plant-health-meter.kicad_prl  Plant-health-meter.kicad_pro  Plant-health-meter.kicad_sch  _autosave-Plant-health-meter.kicad_pcb  adc.kicad_sch  io.kicad_sch  mcu.kicad_sch  pwr.kicad_sch  pwr.kicad_sch-bak  sensors.kicad_sch  sym-lib-table
PCB/Project_Library.pretty/: Moisture_sensor_pads.kicad_mod
PCB/manufacture/: Plant-health-meter.csv
Project_Library.pretty/: Moisture_sensor_pads.kicad_mod
firmware/: .clangd  .gitignore  ADS1115_registers.h  CMakeLists.txt  extra_script.py  partitions.csv  platformio.ini  sdkconfig.esp32dev
firmware/main/: ADS1115.c  ADS1115.h  ADS1115_registers.h  BME280.c  BME280.h  CMakeLists.txt  ble_wifi_credentials.c  ble_wifi_credentials.h  bme280_registers.h  data_store.c  data_store.h  firebase_api.c  firebase_api.h  http_client.c  http_client.h  http_server.c  http_server.h  i2c_master.c  i2c_master.h  io_config.c  io_config.h  main.c  packet.c  packet.h  sensor_api.c  sensor_api.h  time_sync.c  time_sync.h  wifi_api.c  wifi_api.h  wifi_credentials_store.c  wifi_credentials_store.h
server/: data.txt  main.c  server
silkscreen-pictures/: open_source.kicad_mod
simulation/: plot.py
(+33 files in other folders)
